--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+body{
+    margin: 0;
+    padding: 0;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+#main{
+    text-align: center;
+    background-color: black;
+}
+
+#photo-heading{
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    
+}
